@@ -4,9 +4,11 @@ TODO:
 	gpio/ssb/userspace led
     imq/connlimit testing
 	macvlan
+	extroot
 	xt_ipp2p/ipt_ipp2p
 	nf_defrag_ipv4
 	cls_basic vs. cls_flow ?
+	support CFE 1.0.37-10.3
  2.0:
     backport bcm63xx_enet/robocfg
 	swconfig
@@ -15,9 +17,9 @@ TODO:
 
 userspace packages:
 base:
-    gpioctl swconfig 
+    gpioctl swconfig
 opkg:
-    pptpd screen wol vim openvpn rsync sudo git
+    pptpd wol vim rsync git sudo losetup openvpn openvpn-easy-rsa
 
 multi-lun:
 	http://www.groupsrv.com/linux/about163562.html
