@@ -2990,7 +2990,7 @@ CONFIG_PACKAGE_less=m
 # CONFIG_PACKAGE_lirc is not set
 # CONFIG_PACKAGE_lm-sensors is not set
 # CONFIG_PACKAGE_logrotate is not set
-# CONFIG_PACKAGE_losetup is not set
+CONFIG_PACKAGE_losetup=m
 # CONFIG_PACKAGE_lrzsz is not set
 # CONFIG_PACKAGE_lsof is not set
 # CONFIG_PACKAGE_macchanger is not set
