@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Backfire (r26686)
-# Mon May 16 09:25:15 2011
+# Sat May 21 21:08:43 2011
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -1864,8 +1864,11 @@ CONFIG_PACKAGE_kmod-usb-storage=y
 # CONFIG_PACKAGE_owserver is not set
 # CONFIG_PACKAGE_remotefs is not set
 # CONFIG_PACKAGE_remotefs-server is not set
-# CONFIG_PACKAGE_samba2-common is not set
-# CONFIG_PACKAGE_samba3 is not set
+CONFIG_PACKAGE_samba2-common=m
+# CONFIG_PACKAGE_samba2-client is not set
+CONFIG_PACKAGE_samba2-server=m
+CONFIG_PACKAGE_samba3=m
+# CONFIG_SAMBA3_DEBUG is not set
 # CONFIG_PACKAGE_sshfs is not set
 # CONFIG_PACKAGE_unfs3 is not set
 
@@ -2374,12 +2377,17 @@ CONFIG_PACKAGE_libuuid=m
 # SSL
 #
 # CONFIG_PACKAGE_libaxtls is not set
-# CONFIG_PACKAGE_libcyassl is not set
+CONFIG_PACKAGE_libcyassl=m
 # CONFIG_PACKAGE_libgnutls is not set
 # CONFIG_PACKAGE_libgnutls-extra is not set
 # CONFIG_PACKAGE_libgnutls-openssl is not set
 # CONFIG_PACKAGE_libmatrixssl is not set
-# CONFIG_PACKAGE_libopenssl is not set
+CONFIG_PACKAGE_libopenssl=m
+
+#
+# Configuration
+#
+# CONFIG_OPENSSL_ENGINE is not set
 # CONFIG_PACKAGE_libpolarssl is not set
 
 #
@@ -2534,7 +2542,7 @@ CONFIG_PACKAGE_libncurses=m
 # CONFIG_PACKAGE_libnfc is not set
 # CONFIG_PACKAGE_libnfnetlink is not set
 # CONFIG_PACKAGE_libnids is not set
-# CONFIG_PACKAGE_libnl is not set
+CONFIG_PACKAGE_libnl=m
 CONFIG_PACKAGE_libnl-tiny=m
 # CONFIG_PACKAGE_libnmeap is not set
 # CONFIG_PACKAGE_libogg is not set
@@ -2558,7 +2566,7 @@ CONFIG_PACKAGE_libnl-tiny=m
 # CONFIG_PACKAGE_libptmalloc3 is not set
 # CONFIG_PACKAGE_libradiusclient-ng is not set
 # CONFIG_PACKAGE_libre is not set
-# CONFIG_PACKAGE_libreadline is not set
+CONFIG_PACKAGE_libreadline=m
 # CONFIG_PACKAGE_librpcsecgss is not set
 # CONFIG_PACKAGE_librrd is not set
 # CONFIG_PACKAGE_librrd1 is not set
@@ -2967,7 +2975,7 @@ CONFIG_PACKAGE_gpioctl=m
 # CONFIG_PACKAGE_lirc is not set
 # CONFIG_PACKAGE_lm-sensors is not set
 # CONFIG_PACKAGE_logrotate is not set
-# CONFIG_PACKAGE_losetup is not set
+CONFIG_PACKAGE_losetup=m
 # CONFIG_PACKAGE_lrzsz is not set
 # CONFIG_PACKAGE_lsof is not set
 # CONFIG_PACKAGE_macchanger is not set
